--- a/GlassShop/pom.xml
+++ b/GlassShop/pom.xml
@@ -40,6 +40,11 @@
 			<groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- Validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 		<!-- PostgreSQL -->
 		<dependency>
@@ -95,6 +100,17 @@
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-csv</artifactId>
     <version>1.10.0</version>
+</dependency>
+<!-- Apache PDFBox for PDF generation -->
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.29</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>fontbox</artifactId>
+    <version>2.0.29</version>
 </dependency>
 
 <!-- Testing Dependencies -->
