--- a/GlassShop/src/main/resources/application.properties
+++ b/GlassShop/src/main/resources/application.properties
@@ -34,9 +34,10 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:/db/migration
 # Disable validation for fresh setup - will re-enable after first successful run
 spring.flyway.validate-on-migrate=false
+spring.flyway.encoding=UTF-8
 
 
 spring.mail.host=smtp.gmail.com
