--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -30,7 +30,7 @@ server {
     }
 
     # Direct backend endpoints (if not using /api prefix)
-    location ~ ^/(auth|stock|audit|ai|admin) {
+    location ~ ^/(auth|stock|audit|ai|admin|api) {
         proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
